objects/DniByCredicardiBySegment__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Numero Maximo de DNI por tarjetas de credito por segmento</description>
    <fields>
        <fullName>MaxNumberDnxCredicard__c</fullName>
        <description>Numero Maximo de Tarjetas de Credito</description>
        <label>MaxNumberDnxCredicard</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months__c</fullName>
        <description>Numero de Meses</description>
        <label>Months</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Segmento de Cliente</description>
        <label>Segment</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DniByCredicardiBySegment</label>
</CustomObject>